Bug 305734 - Incorrect text color for selected hidden items
Summary: Incorrect text color for selected hidden items
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL: http://i12.photobucket.com/albums/a20...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-24 17:55 UTC by tekwyzrd
Modified: 2013-05-22 00:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tekwyzrd 2012-08-24 17:55:10 UTC
Selected hidden files and folders use standard text color rather than the selected text color used by non-hidden files and photos as shown in the linked image. This can make selected file and folder names unreadable. This also applies to konquerer since both use the same colors

Reproducible: Always

Steps to Reproduce:
1.Create or select a color scheme with a dark hilight color and light selected text color
2. Open konqueror or dolphin.
3. Select a non-hidden file or photo and observe text color.
4. Select a hidden file or folder and observe that a different text color is used.
Actual Results:  
"Normal Text" color from the "view" color set is used for selected hidden items

Expected Results:  
Selection text color used for hidden item text as is done with non-hidden items.
Comment 1 tekwyzrd 2012-08-24 17:58:55 UTC
3. Select a non-hidden file or folder and observe text color.
Comment 2 tekwyzrd 2012-08-24 17:59:57 UTC
3. Select a non-hidden file or folder and observe text color.
Comment 3 Frank Reininghaus 2012-08-27 14:37:59 UTC
Thanks for the bug report!

Just for the record: Christoph provided some analysis at https://git.reviewboard.kde.org/r/106194/
Comment 4 tekwyzrd 2012-08-28 13:37:42 UTC
I'm not too sure about the linked comment. It sure seems like the selected hidden item text color is the problem. If I change the value for "normal text" in the "view" color set and restart konqueror or dolphin the selected hidden item's text color changes.
Comment 5 Christoph Feck 2012-08-28 22:10:18 UTC
I know, that's why I discarded the review request. You should have stated that you are using the Details view mode.
Comment 6 tekwyzrd 2012-08-28 22:20:59 UTC
Please refer to url above for image of described bug.
Comment 7 Janet 2013-04-21 17:23:16 UTC
I can confirm this with dolphin 2.2 and KDE SC 4.10.2, and the wrong (dark) text color for the selected hidden items really only appears in details view.
Comment 8 Frank Reininghaus 2013-04-24 22:00:39 UTC
I guess we should just use the normal "selected text" color for selected hidden items:

https://git.reviewboard.kde.org/r/110164/

@Christoph and the others: do you see a problem with this approach? If yes, please let me know.
Comment 9 Frank Reininghaus 2013-05-02 17:30:18 UTC
Git commit 572513a167cd9f9ffc022179c60a4b69a179d7f3 by Frank Reininghaus.
Committed on 02/05/2013 at 19:27.
Pushed by freininghaus into branch 'KDE/4.10'.

Use the same text color for selected hidden and non-hidden items

This fixes the problem that the names of selected hidden items are
unreadable with some color schemes.
FIXED-IN: 4.10.3
REVIEW: 110164

M  +7    -3    dolphin/src/kitemviews/kstandarditemlistwidget.cpp

http://commits.kde.org/kde-baseapps/572513a167cd9f9ffc022179c60a4b69a179d7f3
Comment 10 tekwyzrd 2013-05-22 00:06:24 UTC
Thank you for resolving this. If you use the standard text color for hidden items the selected text color for selected hidden items is the logical choice. Another more detailed resolution would have been to define the hidden text and background colors (defaulting to standard colors if undefined in color scheme). The newly defined colors would make it more obvious to the user they are working with hidden items.